# RustBot

./: .dockerignore  .env.example  .gitignore  AUTOUPDATE_SETUP.md  CACHING.md  CASAOS_DEPLOYMENT.md  CHANGES_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  DOCKERHUB_RELEASE.md  Dockerfile  GAMES.md  LICENSE  NEW_COMMANDS.md  README.md  UWU_COMMAND.md  deploy-autoupdate.sh  deploy.sh  docker-build.sh  docker-compose.casaos.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  flake.nix  result  startup.sh  update-bot.sh
.github/: BRANCH_PROTECTION_SETUP.md
.github/workflows/: ci.yml  docker.yml
src/: main.rs  utils.rs
src/commands/: bonk.rs  cleanup.rs  coinflip.rs  dice.rs  facebook_events.rs  general.rs  hangman.rs  hello.rs  help.rs  hit.rs  invite.rs  kys.rs  ltrack.rs  mock.rs  mod.rs  number_guess.rs  park.rs  pfp.rs  ping.rs  play.rs  poll.rs  react.rs  remind.rs  spamping.rs  stats.rs  stats_render.rs  status.rs  tictactoe.rs  update.rs  uwu.rs  yeet.rs  yourmom.rs
