[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "utils",
    "builder",
] }
poise = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10"
dotenvy = "0.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
image = "0.24"
reqwest = { version = "0.11", features = [
    "stream",
    "rustls-tls",
    "json",
], default-features = false }
# songbird 0.6 speaks reqwest 0.12, so its YoutubeDl::new wants a 0.12 Client.
# Pull one in under an alias (cargo unifies it with songbird's copy) purely for
# the voice source client; the rest of the bot stays on reqwest 0.11.
reqwest012 = { package = "reqwest", version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
gif = "0.12"
tempfile = "3.8"
aes-gcm = "0.10"
base64 = "0.21"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
governor = "0.6"
nonzero_ext = "0.3"
# Voice support for the -play command. rustls everywhere (no OpenSSL), plus the
# built-in track queue. Needs libopus at build time and yt-dlp + ffmpeg at runtime.
# 0.6 is required for the DAVE protocol (Discord's E2EE voice), which newer voice
# channels mandate — older songbird gets kicked with close code 4017. DAVE ships
# in the default `driver` feature (pure-Rust `davey`, no extra native deps).
songbird = { version = "0.6", default-features = false, features = [
    "driver",
    "gateway",
    "serenity",
    "rustls",
    "tungstenite",
    "builtin-queue",
] }
# Songbird ships its own Opus decoder but relies on symphonia for demuxing and for
# other codecs. Enable the container/codec readers YouTube audio actually uses
# (WebM/Opus, m4a/AAC, Ogg, MP3, raw PCM/WAV).
symphonia = { version = "0.5", default-features = false, features = [
    "aac",
    "isomp4",
    "mkv",
    "ogg",
    "mp3",
    "pcm",
    "wav",
] }

[[bin]]
name = "rustbot"
path = "src/main.rs"
